--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/cheese_burrito.html">Cheesy Low Carb Burrito</a></li>
+        <li><a href="recipes/chicken_noodle_salad.html">Chicken Noodle Salad</a></li>
+        <li>WIP</li>
+
+    </ul>
+   
+
+
 </body>
 </html>
