--- a/recipes/cheese_burrito.html
+++ b/recipes/cheese_burrito.html
@@ -6,6 +6,7 @@
     <title>Cheese Burrito</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Cheesy Low Carb Burrito</h1>
     <br>
     <img src="../images/cheesyburrito.png" height="400" width="400" alt="a photo of a chorizo breakfast burrito">
