--- a/recipes/chicken_noodle_salad.html
+++ b/recipes/chicken_noodle_salad.html
@@ -6,6 +6,7 @@
     <title>Chicken Noodle Salad</title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Chicken Noodle Salad</h1>
     <img src="../images/chicken_noodle.webp" height="400" width="400" alt="A photo of chicken noodle salad">
     <p>This is an easy recipe that hardly requires any cooking and can be tossed together in a few minutes with some leftover chicken.</p>
