--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/cheese_burrito.html">Cheesy Low Carb Burrito</a></li>
         <li><a href="recipes/chicken_noodle_salad.html">Chicken Noodle Salad</a></li>
-        <li>WIP</li>
+        <li><a href="recipes/deviled_eggs.html">Delicious Deviled Eggs</a></li>
 
     </ul>
    
